# OpenCPN

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  OPENCP.mak  OPENCP.mdp  OPENCP.ncb  README  config.guess  config.sub  configure  configure.in  makefile.vc  makefile.wat  opencpn.kdevelop  opencpn.kdevelop.pcs  opencpn.kdevses
autom4te.cache/: output.0  requests  traces.0  traces.1
buildosx/: README  wxMac-2.8.10.patch
buildosx/openCPNOSx.xcodeproj/: project.pbxproj  richard.mode1v3  richard.pbxuser
buildwin/: .cvsignore  opencpn.sln  opencpn.vcproj
data/: tips.html
data/bitmaps/: down.xpm  left.xpm
data/doc/: help.html
data/doc/includes/: menu.css  menu_ie.css  opencpn.css  opencpn.js
data/s57data/: S52RAZDS.RLE  S52RGB.TXT  attdecode.csv
data/tcdata/: HARMONIC.IDX
include/: about.h  ais.h  bbox.h  bitmapo.h  chart1.h  chartbase.h  chartdb.h  chartdbs.h  chartimg.h  chcanv.h  cm93.h  concanv.h  cutil.h  dychart.h  dymemdc.h  georef.h  gpc.h  grib.h  iso8211.h  macutils.h  mygeom.h  navutil.h  nmea.h  ocpn_pixel.h  options.h  routeman.h  routeprop.h  s52plib.h  s52s57.h  s52utils.h  s57chart.h  s57mgr.h  scrollingdialog.h  sercomm.h  statwin.h  tcmgr.h  thumbwin.h  triangulate.h  wificlient.h  wvschart.h
plugins/dashboard_pi/: CMakeLists.txt
plugins/dashboard_pi/src/: dashboard_pi.cpp
plugins/grib_pi/: CMakeLists.txt
po/: opencpn.pot  opencpn_da_DK.mo  opencpn_da_DK.po  opencpn_de_DE.mo  opencpn_de_DE.po  opencpn_es_ES.mo  opencpn_es_ES.po  opencpn_fr_FR.mo  opencpn_fr_FR.po  opencpn_it_IT.mo  opencpn_it_IT.po  opencpn_nl_NL.mo  opencpn_nl_NL.po  opencpn_pl_PL.mo  opencpn_pl_PL.po  opencpn_sv_SE.mo  opencpn_sv_SE.po
src/: about.cpp  ais.cpp  bbox.cpp  bitmapo.cpp  chart1.cpp  chartdb.cpp  chartdbs.cpp  chartimg.cpp  chcanv.cpp  cm93.cpp  concanv.cpp  cutil.c  dataum.c  dymemdc.cpp  georef.c  gpc.c  gpxdocument.cpp  grib.cpp  macutils_cocoa.cpp  mygeom.cpp  navutil.cpp  nmea.cpp  ocpn_pixel.cpp  opencpn.rc  options.cpp  pluginmanager.cpp  routeman.cpp  routemanagerdialog.cpp  routeprop.cpp  s52cnsy.cpp  s52plib.cpp  s52utils.cpp  s57chart.cpp  s57mgr.cpp  scrollingdialog.cpp  sercomm.cpp  statwin.cpp  tcmgr.cpp  thumbwin.cpp  tri.c  (+2 more)
src/bitmaps/: activepoint.xpm  airplane.xpm  anchor.xpm  anchorage.xpm  boarding.xpm  boundary.xpm  bouy1.xpm  bouy2.xpm  campfire.xpm  camping.xpm  circle.xpm  colscheme.xpm  coral.xpm  current.xpm  diamond.xpm  empty.xpm  exitt.xpm  fish.xpm  fishhaven.xpm  fishing.xpm  float.xpm  follow.xpm  food.xpm  fuel.xpm  gpx_export.xpm  gpx_import.xpm  greenlite.xpm  help.xpm  icons.cpp  icons.h  kelp.xpm  light.xpm  light1.xpm  litevessel.xpm  mob.xpm  mooring.xpm  oilbouy.xpm  pencil.xpm  platform.xpm  print.xpm  (+27 more)
src/bitmaps/32x32_svg_src/: create_32x32.sh
src/dialog/: options.cpp  options.h
src/grib/: GribReader.cpp  GribRecord.cpp  GribRecord.h  IsoLine.cpp  IsoLine.h
src/mygdal/: cpl_config.h  cpl_conv.cpp  cpl_conv.h  cpl_csv.cpp  cpl_csv.h  cpl_dir.cpp  cpl_error.cpp  cpl_error.h  cpl_findfile.cpp  cpl_list.h  cpl_minixml.cpp  cpl_minixml.h  cpl_multiproc.h  cpl_odbc.h  cpl_path.cpp  cpl_port.h  cpl_string.cpp  cpl_string.h  cpl_vsi.h  cpl_vsisimple.cpp  cplgetsymbol.cpp  gdal.h  gdal_alg.h  gdal_frmts.h  gdal_misc.cpp  gdal_priv.h  gdalwarper.h  gml2ogrgeometry.cpp  iso8211.h  ogr2gmlgeometry.cpp  ogr_api.h  ogr_attrind.cpp  ogr_attrind.h  ogr_core.h  ogr_feature.h  ogr_featurestyle.h  ogr_fromepsg.cpp  ogr_gensql.cpp  ogr_gensql.h  ogr_geometry.h  (+47 more)
src/myiso8211/: ddffield.cpp  ddffielddefn.cpp  ddfmodule.cpp  ddfrecord.cpp  ddfrecordindex.cpp  ddfsubfielddefn.cpp  ddfutils.cpp
src/nmea0183/: AAM.CPP  AAM.HPP  ALM.CPP  ALM.HPP  APB.CPP  APB.HPP  ASD.CPP  ASD.HPP  BEC.CPP  BEC.HPP  BOD.CPP  BOD.HPP  BWC.CPP  BWC.HPP  BWR.CPP  BWR.HPP  BWW.CPP  BWW.HPP  CHECKSUM.CPP  DBT.CPP  DBT.HPP  DCN.CPP  DCN.HPP  DECCALOP.CPP  DECCALOP.HPP  DPT.CPP  DPT.HPP  FIELD.CPP  FREQMODE.CPP  FREQMODE.HPP  FSI.CPP  FSI.HPP  GGA.CPP  GGA.HPP  GLC.CPP  GLC.HPP  GLL.CPP  GLL.HPP  GXA.CPP  GXA.HPP  (+113 more)
