dnl Disable configure caching ... it causes lots of hassles.
define([AC_CACHE_LOAD], )
define([AC_CACHE_SAVE], )

AC_INIT(src/chart1.cpp)
AM_INIT_AUTOMAKE(opencpn, 0.1)
#AC_CONFIG_HEADER(config.h)

AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL
AC_LIBTOOL_DLOPEN
#AC_PROG_LIBTOOL

CPPFLAGS="$CPPFLAGS -Wall -g -fexceptions"
CXXFLAGS="$CPPFLAGS -Wall -g -fexceptions"

AC_ARG_ENABLE(s57enc,
     [  --enable-s57enc    Enable S57 ENC Support],
     [case "${enableval}" in
       yes) s57enc=true ;;
       no)  s57enc=false ;;
       *) AC_MSG_ERROR(bad value ${enableval} for --enable-s57enc) ;;
     esac],[s57enc=true])
AM_CONDITIONAL(BUILD_WITH_S57, test x$s57enc = xtrue)
AC_SUBST(BUILD_WITH_S57)

gdal_internal=false
gdal_shared=true
AC_ARG_WITH(gdal_internal,
          [[  --with-gdal-internal    use Internal GDAL/OGR]],
          [gdal_internal=true]
           )

AM_CONDITIONAL(BUILD_WITH_INTERNAL_GDAL, test x$gdal_internal = xtrue)
AC_SUBST(BUILD_WITH_INTERNAL_GDAL)

AM_CONDITIONAL(BUILD_WITH_SHARED_GDAL, test x$gdal_internal = xfalse)
AC_SUBST(BUILD_WITH_SHARED_GDAL)

GDALCONFIG=gdal-config
GDAL_LIBS="`$GDALCONFIG --libs`"
AC_SUBST(GDAL_LIBS)
GDAL_CFLAGS="`$GDALCONFIG --cflags`"
AC_SUBST(GDAL_CFLAGS)

tess_internal=false
test_glu=true
AC_ARG_WITH(tess_internal,
          [[  --with-tess-internal    use Internal Polygon Tesselator]],
          [tess_internal=true]
           )

AM_CONDITIONAL(BUILD_WITH_INTERNAL_TESS, test x$tess_internal = xtrue)
AC_SUBST(BUILD_WITH_INTERNAL_TESS)
AM_CONDITIONAL(BUILD_WITH_GLU_TESS, test x$tess_internal = xfalse)
AC_SUBST(BUILD_WITH_GLU_TESS)

wifi_client=false
AC_ARG_WITH(wifi_client,
          [[  --with-wifi-client    Enable wifi client]],
          [wifi_client=true]
           )

AM_CONDITIONAL(BUILD_WITH_WIFI_CLIENT, test x$wifi_client = xtrue)
AC_SUBST(BUILD_WITH_WIFI_CLIENT)


WXCONFIG=wx-config
AC_ARG_WITH(wx-config,
[[  --with-wx-config=FILE     Use the given path to wx-config when determining
                            wxWidgets configuration; defaults to "wx-config"]],
[
    if test "$withval" != "yes" -a "$withval" != ""; then
        WXCONFIG=$withval
    fi
])


wxversion=0

AC_DEFUN([WXTEST],
[
      AC_REQUIRE([AC_PROG_AWK])
      AC_MSG_CHECKING([wxWidgets version])
      if wxversion=`$WXCONFIG --version`; then
            AC_MSG_RESULT([$wxversion])
      else
            AC_MSG_RESULT([not found])
            AC_MSG_ERROR([wxWidgets is required. Try --with-wx-config.])
      fi])

# Call WXTEST func
WXTEST

# Verify minimus requires
vers=`echo $wxversion | $AWK 'BEGIN { FS = "."; } { printf "% d", ($1 * 1000 + $2) * 1000 + $3;}'`
if test -n "$vers" && test "$vers" -ge 2006001; then
      WX_CPPFLAGS="`$WXCONFIG --cppflags`"
      WX_CXXFLAGS="`$WXCONFIG --cxxflags | sed -e 's/-fno-exceptions//'`"
      WX_LIBS="`$WXCONFIG --libs`"
else
      AC_MSG_ERROR([wxWidgets 2.6.1 or newer is required])
fi


CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
CXXFLAGS="$CXXFLAGS $WX_CPPFLAGS"


AC_SUBST(WX_LIBS)

AC_OUTPUT(Makefile)
